samples/_failures_safe/1761356402_374360_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a45e4b18.c: In function ‘main’:
./samples/SAFE/__tmp_a45e4b18.c:145:32: error: missing terminating " character
  145 |     char* operation_names[] = {"Trans
      |                                ^~~~~~
./samples/SAFE/__tmp_a45e4b18.c:145:5: error: expected expression at end of input
  145 |     char* operation_names[] = {"Trans
      |     ^~~~
./samples/SAFE/__tmp_a45e4b18.c:145:5: error: expected declaration or statement at end of input
